--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "learn-browser",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Test Flatiron School's JavaScript curriculum with a browser-based Mocha runner.",
   "main": "learnBrowser.js",
   "scripts": {
     "test": "mocha"
   },
-  "repository": "git+https://github.com/learn-co/learn-browser.git",
+  "repository": "git+https://github.com/gj/learn-browser.git",
   "keywords": [
     "learn.co",
     "flatiron",
@@ -19,10 +19,11 @@
   "author": "Flatiron School",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/learn-co/learn-browser/issues"
+    "url": "https://github.com/gj/learn-browser/issues"
   },
-  "homepage": "https://github.com/learn-co/learn-browser#readme",
+  "homepage": "https://github.com/gj/learn-browser#readme",
   "dependencies": {
+    "browser-sync": "^2.18.13",
     "chai": "^4.1.0",
     "mocha": "^3.4.2",
     "sinon": "^2.3.8"
