Remove no-cors notice and bump version — still need to add CORS headers to Ironbroker

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learn-browser",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "Test Flatiron School's JavaScript curriculum with a browser-based Mocha runner.",
   "main": "learnBrowser.js",
   "scripts": {
@@ -9,12 +9,11 @@
   "repository": "git+https://github.com/gj/learn-browser.git",
   "keywords": [
     "learn.co",
-    "flatiron",
-    "school",
+    "flatiron school",
     "mocha",
     "chai",
     "sinon",
-    "browser"
+    "browser-sync"
   ],
   "author": "Flatiron School",
   "license": "MIT",
