--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "learn-browser",
-  "version": "0.1.3",
+  "version": "0.1.6",
   "description": "Test Flatiron School's JavaScript curriculum with a browser-based Mocha runner.",
   "main": "learnBrowser.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "postinstall": "gem install learn-co"
   },
   "repository": "git+https://github.com/gj/learn-browser.git",
   "keywords": [
