--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "homepage": "https://github.com/learn-co/learn-browser#readme",
   "dependencies": {
-    "browser-sync": "~2.18.13",
+    "browser-sync": "^2.26.3",
     "chai": "~4.1.0",
-    "mocha": "~3.4.2",
+    "mocha": "^5.2.0",
     "sinon": "~2.3.8"
   }
 }
