--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/learn-co/learn-browser#readme",
   "dependencies": {
-    "browser-sync": "^2.18.3",
+    "browser-sync": "~2.18.13",
     "chai": "~4.1.0",
     "mocha": "^5.2.0",
     "sinon": "~7.2.3"
