--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learn-browser",
-  "version": "0.1.20",
+  "version": "0.1.21",
   "description": "Test Flatiron School's JavaScript curriculum with a browser-based Mocha runner.",
   "main": "learnBrowser.js",
   "repository": "git+https://github.com/learn-co/learn-browser.git",
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/learn-co/learn-browser#readme",
   "dependencies": {
-    "browser-sync": "~2.18.13",
+    "browser-sync": "^2.21.0",
     "chai": "~4.1.0",
     "mocha": "^5.2.0",
     "sinon": "~7.2.3"
